[tool.poetry]
name = "etsi0014_server"
version = "0.1.0"
description = "A mock implementation of ETSI-0014 QKD protocol"
authors = ["Arjo Chakaravarty <arjo@novusq.sg>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
